# Psuedo-Label-Optimization

./: .gitignore  README.md  pseudo_labeling.py  pyproject.toml  requirements.txt
configs/training/: obj_detection.yaml
notebooks/: pseudo-labeling.ipynb  pseudo_labeling_metadata.db  pseudo_labeling_metadata_broc_test.db  pseudo_labeling_metadata_ptest.db  pseudo_labeling_metadata_test.db
scrap/: copy-convert-keypoints.py  revert.py  temp.py  use-case-test-on-val.py  use-case-test.py
scrap/configs/training/: inst_segmentation.yaml
scrap/core/: cvat_functions.py  functions.py  local_initializers.py  logging_functions.py  test.py
scrap/db/: db_functions.py
src/pseudo_labeling/: __init__.py  cvat_manager.py  database_pseudo.py  pipeline.py
