[tool.poetry]
name = "pseudo-labeling-pipeline"
version = "0.1.0"
description = "Automated pseudo-labeling pipeline integrated with OneDL and CVAT"
authors = ["Daniel5452 <danielosman5@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pseudo_labeling", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
onedl = "^0.18.5"
requests = "^2.31.0"
ipywidgets = "^8.1.7"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[[tool.poetry.source]]
name = "vbti"
url = "https://pypi.prod.vbti.nl"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"